--- a/index.jade
+++ b/index.jade
@@ -1,12 +1,24 @@
 doctype html
 
-html
+html(ng-app="app" ng-controller="homeNav")
   meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
   head
-    title Wilfred James Godfrey
+    title Wilfred Godfrey
     link(rel="stylesheet" type="text/css" href="./css/index.css")
     link(rel="stylesheet" type="text/css" href="./css/bootstrap.css")
-  body
+  body.container
+    .row.header
+      .col-sm-12
+        h1 Wilfred Godfrey
+        | A Full Stack Javascript Developer
+        br
+        | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>
+        | or <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email me</a>
+
+    .row
+      .wg_main_menu
 
     script(src='./js/analytics.js')
+    script(src='./js/angular.js')
+    script(src='./js/angular-sanitize.js')
     script(src='./js/index.js')
