Add mini nav widget

--- a/templates/wgMainMenu.html
+++ b/templates/wgMainMenu.html
@@ -1,1 +1,1 @@
-<div ng-repeat="item in menuConfig" class="col-sm-3"><a ng-href="./{{item.url_suffix}}" class="thumbnail"><img ng-src="./img/nav/{{item.img_src}}"/></a><h4>{{item.name}}</h4><div ng-bind-html="item.description"></div></div>
+<div ng-repeat="item in menuConfig" class="col-md-3 col-xs-6 project"><a ng-href="./{{item.url}}" class="thumbnail"><img ng-src="./img/nav/{{item.img}}"/></a><h4>{{item.name}}</h4><div ng-bind-html="item.description"></div><em><small ng-bind-html="item.hint"></small></em></div>
