--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,21 @@
+[ngcloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
+}
 body {
   margin: 0;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
 }
 canvas {
   cursor: none;
 }
 .header {
   margin-bottom: 30px;
+}
+.project {
+  margin-bottom: 40px;
 }
