--- a/index.jade
+++ b/index.jade
@@ -1,19 +1,20 @@
 doctype html
 
-html(ng-app="app" ng-controller="homeNav")
+html
   meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
   head
     title Wilfred Godfrey
+    link(rel="stylesheet" type="text/css" href="./css/nav.css")
     link(rel="stylesheet" type="text/css" href="./css/index.css")
     link(rel="stylesheet" type="text/css" href="./css/bootstrap.css")
   body.container
     .row.header
-      .col-sm-12
+      .col-lg-12
         h1 Wilfred Godfrey
         | A Full Stack Javascript Developer
         br
-        | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>
-        | or <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email me</a>
+        | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>,
+        | or send me an <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email</a>
 
     .row
       .wg_main_menu
