--- a/templates/wgMainMenu.jade
+++ b/templates/wgMainMenu.jade
@@ -1,5 +1,7 @@
-.col-sm-3(ng-repeat="item in menuConfig")
-  a(ng-href="./{{item.url_suffix}}").thumbnail
-    img(ng-src="./img/nav/{{item.img_src}}")
+.col-md-3.col-xs-6(ng-repeat="item in menuConfig").project
+  a(ng-href="./{{item.url}}").thumbnail
+    img(ng-src="./img/nav/{{item.img}}")
   h4 {{item.name}}
   div(ng-bind-html="item.description")
+  em
+    small(ng-bind-html="item.hint")
