Add mini nav widget

--- a/index.jade
+++ b/index.jade
@@ -23,3 +23,4 @@ html
     script(src='./js/angular.js')
     script(src='./js/angular-sanitize.js')
     script(src='./js/index.js')
+    script(src='./js/nav.js')
