--- a/index.jade
+++ b/index.jade
@@ -4,23 +4,23 @@ html
   meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
   head
     title Wilfred Godfrey
-    link(rel="stylesheet" type="text/css" href="./css/nav.css")
     link(rel="stylesheet" type="text/css" href="./css/index.css")
     link(rel="stylesheet" type="text/css" href="./css/bootstrap.css")
   body.container
-    .row.header
-      .col-lg-12
-        h1 Wilfred Godfrey
-        | A Full Stack Javascript Developer
-        br
-        | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>,
-        | or send me an <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email</a>
+    div(ng-app="bodyApp")
+      .row.header
+        .col-lg-12
+          h1 Wilfred Godfrey
+          | A Full Stack Javascript Developer
+          br
+          | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>,
+          | or send me an <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email</a>
 
-    .row
-      .wg_main_menu
+      .row
+        .wg_main_menu
+
 
     script(src='./js/analytics.js')
     script(src='./js/angular.js')
     script(src='./js/angular-sanitize.js')
     script(src='./js/index.js')
-    script(src='./js/nav.js')
