--- a/css/nav.styl
+++ b/css/nav.styl
@@ -2,6 +2,10 @@
   display none !important
 
 .wg-mini-menu
+  font-family "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-size 11px !important
+  line-height 16px
+  color #333
   position fixed
   top 0
   left 0
@@ -9,7 +13,7 @@
   font-size 0.8em
   .menu
     display inline-block
-    color black
+    color #333
     opacity 0.3
     &:hover
       opacity 0.5
@@ -39,7 +43,10 @@
         padding 4px 9px
         &:hover
           background rgba
-        a:hover
+        a
+          color #333
           text-decoration none
+          &:hover
+            text-decoration none
           
 
