--- a/index.jade
+++ b/index.jade
@@ -10,14 +10,18 @@ html
     div(ng-app="bodyApp")
       .row.header
         .col-lg-12
-          h1 Wilfred Godfrey
-          | A Full Stack Javascript Developer
+          h2 Wilfred Godfrey
+          | The late-night tomfoolery of a Javascript Developer
           br
-          | Find me on <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>,
+          | Find me on <a href="http://github.com/wilfredjamesgodfrey" target="_blank">Github</a>,
+          | <a href="http://twitter.com/wjagodfrey" target="_blank">Twitter</a>,
+          | <a href="https://nz.linkedin.com/pub/wilfred-godfrey/68/364/97a/" target="_blank">LinkedIn</a>,
           | or send me an <a href="mailto:wilfred@wilfredgodfrey.com" target="_blank">Email</a>
 
       .row
         .wg_main_menu
+          .col-xs-12
+            .text-center Loading
 
 
     script(src='./js/analytics.js')
