--- a/css/index.styl
+++ b/css/index.styl
@@ -3,7 +3,7 @@
 
 body
   margin 0
-  padding-bottom 60px
+  padding-bottom 10px
   padding-top 30px
 
 canvas
@@ -14,3 +14,12 @@ canvas
 
 .project
   margin-bottom 40px
+  height 400px
+  @media screen and (min-width: 650px)
+    height 490px
+  @media screen and (min-width: 650px)
+    height 490px
+  @media screen and (max-width: 440px)
+    height 350px
+  @media screen and (max-width: 280px)
+    height 400px
